# olas-operate-middleware

./: .coveragerc  .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .gitleaksignore  .pylintrc  .safety-policy.yml  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  IPFS_DOWNLOAD_ISSUES.md  Makefile  PHASE3_REFACTORING_PLAN.md  README.md  RESOURCE_LEAKS.md  RPC_BUG_ANALYSIS.md  SECURITY.md  STABILITY_AND_QUALITY_IMPROVEMENT_PLAN.md  TESTING.md  TEST_COVERAGE_ASSESSMENT.md  VALIDATION_GAPS.md  api.md  app-update.yml  build-win-tenderly.js  build-win.js  build.js  build.mjs  build.tester.js  build.tester.mjs  build_pearl.sh  customSign.js  dev-app-update.yml  download_binaries.sh  package.json  pyproject.toml  pytest.ini  test_serializer.py  tox.ini
.claude/: settings.json
.claude/agents/: api-documenter.md  security-reviewer.md
.claude/commands/: explore-middleware-codebase.md
.claude/hooks/: advise-code-review.py  block-git-commit.py
.claude/plans/: multisend-transaction-batching.md
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: backend.yml  common_checks.yml  create-production-release.yml  frontend.yml  gitleaks.yml  release.yml  release_win.yml  snyk-security.yml
docs/: api.md  architecture-overview.md  services-and-deployment.md  staking-and-onchain-model.md  wallet-and-funding.md
docs/dev/: macos-setup.md  rpcs.md  ubuntu-setup.md  windows-setup.md
electron/: .eslintignore  .eslintrc.json  app-update.yml  dev-app-update.yml  install.js  install.mjs  jsconfig.json  logger.js  main.js  main.mjs  ports.js  preload.js  preload.mjs  processes.js  store.js  store.mjs  update.js  update.mjs
electron/components/: PearlOTA.js  PearlTray.js
electron/constants/: appSizes.js  config.js  env.js  errors.mjs  index.js  options.js  options.mjs  os.mjs  paths.js  paths.mjs  ports.mjs  publishOptions.js
electron/scripts/: afterAllArtifactBuild.js  afterPack.js
electron/test/: dev-app-update.yml  updater.test.js  updater.test.mjs
electron/utils/: env-validation.js  icons.js  icons.mjs  logger.js  logger.mjs  ports.js  ports.mjs  processes.js  processes.mjs
frontend/: .eslintrc.json  next.config.js  next.config.mjs  package.json  tsconfig.json
frontend/abis/: agentMech.ts  erc20.ts  gnosisSafe.ts  mechActivityChecker.ts  mechMarketplace.ts  memeActivityChecker.ts  multicall3.ts  requesterActivityChecker.ts  serviceRegistryL2.ts  serviceStakingTokenMechUsage.ts  stakingActivityChecker.ts  stakingTokenProxy.ts
frontend/client/: enums.ts  types.ts
frontend/components/: AccountBalanceDetails.tsx  AddressLink.tsx  AgentSelection.tsx  FeatureNotEnabled.tsx  InfoBreakdown.tsx  InfoTooltip.tsx
frontend/config/: activityCheckers.ts  agents.ts  chains.ts  contracts.ts  mechs.ts  olasContracts.ts  providers.ts  stakingPrograms.ts  tokens.ts
frontend/constants/: address.ts  chains.ts  colors.ts  contractAddresses.ts  headers.ts  index.ts  intervals.ts  providers.ts  react-query-keys.ts  serviceTemplates.ts  sizes.ts  stakingProgramMeta.ts  symbols.ts  thresholds.ts  tokens.ts  urls.ts  width.ts  wrappedTokenProviders.ts
frontend/context/: BalanceProvider.tsx  BalancesAndFundRequirementsProvider.tsx  BalancesAndRefillRequirementsProvider.tsx  ElectronApiProvider.tsx  MasterSafeProvider.tsx  MasterWalletProvider.tsx  ModalProvider.tsx  OnlineStatusProvider.tsx  PageStateProvider.tsx  RewardProvider.tsx  ServicesProvider.tsx  StakingContractDetailsProvider.tsx  StakingContractInfoProvider.tsx  StakingProgramProvider.tsx  SystemNotificationTriggers.tsx  WalletProvider.tsx
frontend/enums/: Agent.ts  Chain.ts  Contract.ts  PageState.ts  Pages.ts  SettingsScreen.ts  SetupScreen.ts  StakingProgram.ts  StakingProgramStatus.ts  Token.ts  Wallet.ts
frontend/graphql/: queries.ts
frontend/hooks/: useAddress.ts  useAgent.ts  useBalanceAndFundRequirementsContext.ts  useBalanceAndRefillRequirementsContext.ts  useBalanceContext.ts  useChainDetails.ts  useChainId.ts  useFeatureFlag.ts  useLogs.ts  useMasterSafe.ts  useMultisig.ts  useNeedsFunds.ts  useNotifyOnNewEpoch.ts  useOnlineStatus.ts  usePageState.ts  usePause.tsx  useReward.ts  useRewardContext.ts  useRewardsHistory.ts  useService.ts  useServiceTemplates.ts  useServices.ts  useSetup.ts  useSharedContext.ts  useStakingContractCountdown.ts  useStakingContractDetails.ts  useStakingContractInfo.ts  useStakingProgram.ts  useWallet.ts
frontend/pages/: _app.tsx  index.tsx
frontend/service/: Account.ts  Autonolas.ts  Ethers.ts  GnosisSafe.ts  Multicall.ts  Services.ts  Wallet.ts  balances.ts
frontend/styles/: globals.scss
operate/: __init__.py  cli.py  constants.py  exceptions.py  keys.py  migration.py  operate_types.py  pearl.py  resource.py  serialization.py  settings.py  tendermint.py  types.py  validators.py
scripts/: compute_next_version.py  fund.py  setup_wallet.py  transfer_olas.py
templates/: memeooorr.yaml  optimus.yaml  trader.yaml
tests/: conftest.py  constants.py  rw.py  test_acc_create_and_login.py  test_account_topup.py  test_agent_runner.py  test_api.py  test_balance_checking_mocked.py  test_bridge_bridge.py  test_bridge_bridge_manager.py  test_bridge_manager.py  test_bridge_providers.py  test_bridge_providers_unit.py  test_cli_unit.py  test_compute_next_version.py  test_contracts.py  test_data_contracts.py  test_deployment_runner_error_handling.py  test_deployment_runner_race_conditions.py  test_deployment_runner_unit.py  test_deployment_runner_unit2.py  test_deployment_runner_zip_integration.py  test_error_paths.py  test_fund_recovery.py  test_fund_recovery_manager.py  test_fund_recovery_manager_integration.py  test_funding_manager_error_handling.py  test_funding_manager_race_conditions.py  test_funding_manager_unit.py  test_funding_manager_unit2.py  test_gnosis_utils.py  test_health_checker_check_service_health.py  test_health_checker_healthcheck_job.py  test_health_checker_race_conditions.py  test_keys.py  test_ledger.py  test_ledger_profiles.py  test_manage_unit.py  test_manage_update_batch_integration.py  test_migration.py  (+35 more)
(+346 files in other folders)
