[tool.poetry]
name = "olas-operate-middleware"
version = "0.15.0"
description = ""
authors = ["David Vilela <dvilelaf@gmail.com>", "Viraj Patel <vptl185@gmail.com>"]
readme = "README.md"
packages = [
    { include = "operate" }
]
include = [
    "operate/data/acn/*",
    "operate/data/contracts/*",
    "operate/data/contracts/staking_token/*",
    "operate/data/contracts/staking_token/build/*",
]

[tool.poetry.scripts]
operate = "operate.cli:main"

[tool.poetry.dependencies]
python = "<3.15,>=3.10"
open-autonomy = {version = "^0.21.12rc4", allow-prereleases = true}
open-aea-ledger-cosmos = {version = "^2.1.0rc6", allow-prereleases = true}
open-aea-ledger-ethereum = {version = "^2.1.0rc6", allow-prereleases = true}
open-aea-ledger-ethereum-flashbots = {version = "^2.1.0rc6", allow-prereleases = true}
open-aea-cli-ipfs = {version = "^2.1.0rc6", allow-prereleases = true}
clea = "==0.1.0rc4"
cytoolz = "==0.12.3"
fastapi = "0.110.3"
uvicorn = "==0.27.0"
psutil = "^5.9.8"
pyinstaller = "^6.8.0"
deepdiff = "^8.6.1"
halo = "==0.0.31"
argon2-cffi = "==23.1.0"
requests-mock = "^1.12.1"
multiaddr = "==0.0.9"
cryptography = "^46.0.3"

[tool.poetry.group.development.dependencies]
tomte = {version = "0.6.1", extras = ["cli"]}
build = "1.2.2.post1"
yappi = "^1.6.10"
viztracer = "^1.1.1"
httpx = "^0.28.1"
pytest-recording = "^0.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
