[project]
name = "olas-operate-middleware"
version = "0.15.24"
description = ""
license = "Apache-2.0"
authors = [
    {name = "David Vilela", email = "dvilelaf@gmail.com"},
    {name = "Viraj Patel", email = "vptl185@gmail.com"},
]
requires-python = "<3.15,>=3.10"
readme = "README.md"
dependencies = [
    "open-autonomy[cli,docker]>=0.21.21,<0.22",
    "open-aea-ledger-cosmos>=2.2.5,<3",
    "open-aea-ledger-ethereum>=2.2.5,<3",
    "open-aea-cli-ipfs>=2.2.5,<3",
    "clea==0.1.0rc4",
    "cytoolz<1.2.0,>=1.0.0",
    "fastapi>=0.120,<0.121",
    "uvicorn>=0.30",
    "psutil>=5.9.8,<6",
    "pyinstaller>=6.8.0,<7",
    "deepdiff>=8.6.2,<9",
    "halo==0.0.31",
    "argon2-cffi==23.1.0",
    "multiaddr==0.0.9",
    "cryptography>=46.0.7,<47",
    "aiohttp>=3.13.4,<4",
    "flask>=3.0,<4",
    "werkzeug>=3.0,<4",
    "typing_extensions>=4.12,<5",
    "requests>=2.32,<3",
]

[project.scripts]
operate = "operate.cli:main"

[dependency-groups]
development = [
    "tomte[cli]==0.7.0",
    "build==1.2.2.post1",
    "yappi>=1.6.10,<2",
    "viztracer>=1.1.1,<2",
    "httpx>=0.28.1,<0.29",
    "pytest-recording>=0.13.4,<0.14",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-xdist>=3.8.0,<4",
    "requests-mock>=1.12.1,<2",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["operate"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
