[project]
name = "olas-operate-middleware"
version = "0.15.28"
description = ""
license = "Apache-2.0"
authors = [
    {name = "David Vilela", email = "dvilelaf@gmail.com"},
    {name = "Viraj Patel", email = "vptl185@gmail.com"},
]
requires-python = "<3.15,>=3.10"
readme = "README.md"
dependencies = [
    "open-autonomy[cli,docker]>=0.21.24,<0.22",
    "open-aea-ledger-cosmos>=2.2.5,<3",
    "open-aea-ledger-ethereum>=2.2.5,<3",
    "open-aea-cli-ipfs>=2.2.5,<3",
    "clea==0.1.0rc4",
    "fastapi>=0.120,<0.121",
    "uvicorn>=0.30",
    "psutil>=5.9.8,<6",
    "deepdiff>=8.6.2,<9",
    "halo==0.0.31",
    "argon2-cffi==23.1.0",
    "cryptography>=46.0.7,<47",
    "aiohttp>=3.13.4,<4",
    "flask>=3.0,<4",
    "werkzeug>=3.0,<4",
    "requests>=2.32,<3",
]

[project.scripts]
operate = "operate.cli:main"

[dependency-groups]
development = [
    "tomte[cli]==0.7.0",
    "build==1.2.2.post1",
    "yappi>=1.6.10,<2",
    "viztracer>=1.1.1,<2",
    "httpx>=0.28.1,<0.29",
    "pytest-recording>=0.13.4,<0.14",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-xdist>=3.8.0,<4",
    "requests-mock>=1.12.1,<2",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["operate"]
module-root = ""

[tool.black]
extend-exclude = "operate/data"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (fast, no network calls)",
    "integration: marks tests as integration tests (slow, requires network/RPC)",
    "requires_rpc: marks tests that require RPC endpoints (implied by integration)",
    "vcr: records/replays HTTP interactions with pytest-recording",
]

[tool.isort]
profile = "black"
order_by_type = false
case_sensitive = true
lines_after_imports = -1
extend_skip = ["operate/data"]
known_first_party = ["operate"]
known_local_folder = ["tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
exclude = [
    "*_pb2.py",
    "*_pb2_grpc.py",
    "operate/data/",
]
max-line-length = 88
select = "B,C,D,E,F,I,W,PT"
# I003 to avoid conflicts with isort
ignore = "E203,E501,W503,D202,B014,D400,D401,DAR,B028,B017,I003"

[tool.pylint.master]
ignore-patterns = ["contract.py"]
ignore = ["operate/data/contracts/"]

# https://pylint.readthedocs.io/en/stable/user_guide/messages/messages_overview.html
# R1735: use-dict-literal
# R1729: use-a-generator
# C0103: invalid-name
# C0201: consider-iterating-dictionary
# W1203: logging-fstring-interpolation
# C0204: bad-mcs-classmethod-argument
# C0209: consider-using-f-string
# C0301: Line too long
# C0302: Too many lines in module
# R0801: similar lines
# E0611: no-name-in-module
# R0903: Too few public methods
[tool.pylint."messages control"]
disable = ["C0103", "R0801", "C0301", "C0201", "C0204", "C0209", "W1203", "C0302", "R1735", "R1729", "W0511", "E0611", "R0903", "R0917", "E1101"]

[tool.pylint.imports]
ignored-modules = ["os", "io", "psutil"]

[tool.pylint.design]
max-public-methods = 58
max-args = 6
max-parents = 10
max-branches = 36
max-attributes = 8

[tool.pylint.spelling]
spelling-ignore-words = "nocover,pragma,params,noqa,kwargs,str,async,json,boolean,config,pytest,args,url,tx,jsonschema,traceback,api,nosec"

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-comments = true
ignore-docstrings = true
ignore-imports = false

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
